--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,43 +3,103 @@ main = "src/index.js"
 compatibility_date = "2024-01-01"
 compatibility_flags = ["nodejs_compat"]
 
-# Environment variables (non-sensitive)
+# =============================================================================
+# ENVIRONMENT VARIABLES STRATEGY
+# =============================================================================
+# This configuration follows a clean separation between sensitive and non-sensitive data:
+#
+# 1. SECRETS (Set via Cloudflare Dashboard only):
+#    - API_KEY: Main API authentication key
+#    - CLIENT_API_KEYS: JSON array of valid client API keys
+#    - CHATWITH_API_KEY: ChatWith service API key
+#    - CHATWITH_CHATBOT_ID: ChatWith chatbot identifier
+#    - GOOGLE_SHEETS_API_KEY: Google Sheets API authentication key
+#    - GOOGLE_SHEETS_ID: Target Google Sheets document ID
+#
+# 2. NON-SENSITIVE VARS (Defined below in [vars] section):
+#    - Configuration values that can be safely stored in version control
+#    - Performance tuning parameters
+#    - Feature flags and operational settings
+# =============================================================================
+
+# Non-sensitive environment variables
 [vars]
+# Environment identifier
 ENVIRONMENT = "production"
-MAX_RETRIES = "10"
-CACHE_TTL = "600"
-CIRCUIT_BREAKER_THRESHOLD = "5"
-CIRCUIT_BREAKER_TIMEOUT = "60000"
 
-# Secrets (sensitive data - set via CLI or dashboard)
-# wrangler secret put CHATWITH_API_KEY
-# wrangler secret put CHATWITH_CHATBOT_ID
-# wrangler secret put GOOGLE_SHEETS_API_KEY
-# wrangler secret put GOOGLE_SHEETS_ID
+# Caching configuration
+CACHE_TTL = "600"                    # Standard cache TTL in seconds (10 minutes)
+DEDUPE_CACHE_TTL = "300"            # Deduplication cache TTL in seconds (5 minutes)
 
-# Worker configuration
+# Circuit breaker configuration
+CIRCUIT_BREAKER_THRESHOLD = "5"      # Number of failures before circuit opens
+CIRCUIT_BREAKER_TIMEOUT = "60000"   # Circuit breaker timeout in milliseconds (1 minute)
+
+# Retry mechanism configuration
+MAX_RETRY_DELAY = "10000"           # Maximum retry delay in milliseconds (10 seconds)
+INITIAL_RETRY_DELAY = "1000"        # Initial retry delay in milliseconds (1 second)
+
+# Google Sheets configuration
+GOOGLE_SHEETS_SHEET_NAME = "Sheet1" # Sheet name for logging (optional, defaults to DEFAULT_SHEET_NAME)
+DEFAULT_SHEET_NAME = "AutoTagging_Logs" # Fallback sheet name if GOOGLE_SHEETS_SHEET_NAME not set
+
+# =============================================================================
+# SECRETS CONFIGURATION
+# =============================================================================
+# All sensitive data must be set via Cloudflare Dashboard:
+# Dashboard > Workers & Pages > [Your Worker] > Settings > Environment Variables
+#
+# Required secrets to configure:
+# - API_KEY
+# - CLIENT_API_KEYS
+# - CHATWITH_API_KEY
+# - CHATWITH_CHATBOT_ID
+# - GOOGLE_SHEETS_API_KEY
+# - GOOGLE_SHEETS_ID
+#
+# DO NOT use wrangler secret commands or add [secrets] section here.
+# This ensures all sensitive data is managed centrally via the dashboard.
+# =============================================================================
+
+# Worker build configuration
 [build]
 command = ""
 
-# Route configuration (update with your domain)
+# Route configuration
 [[routes]]
 pattern = "api.processfy.ai/api/auto-tag"
 zone_name = "processfy.ai"
 
-# Limits and performance
-[limits]
-cpu_ms = 50000
+# Performance limits (commented out for free plan compatibility)
+# [limits]
+# cpu_ms = 50000
 
-# Development configuration
+# =============================================================================
+# ENVIRONMENT-SPECIFIC CONFIGURATIONS
+# =============================================================================
+
+# Development environment
 [env.development]
 name = "wp-auto-tagging-api-dev"
 
 [env.development.vars]
 ENVIRONMENT = "development"
+CACHE_TTL = "60"                    # Shorter cache for development
+DEDUPE_CACHE_TTL = "30"            # Shorter dedup cache for development
+CIRCUIT_BREAKER_THRESHOLD = "3"     # Lower threshold for faster testing
+CIRCUIT_BREAKER_TIMEOUT = "30000"   # Shorter timeout for development
+MAX_RETRY_DELAY = "5000"           # Shorter max delay for development
+INITIAL_RETRY_DELAY = "500"        # Shorter initial delay for development
 
-# Staging configuration
+# Staging environment
 [env.staging]
 name = "wp-auto-tagging-api-staging"
 
 [env.staging.vars]
 ENVIRONMENT = "staging"
+CACHE_TTL = "300"                   # Medium cache for staging
+DEDUPE_CACHE_TTL = "150"           # Medium dedup cache for staging
+CIRCUIT_BREAKER_THRESHOLD = "4"     # Medium threshold for staging
+CIRCUIT_BREAKER_TIMEOUT = "45000"   # Medium timeout for staging
+MAX_RETRY_DELAY = "7500"           # Medium max delay for staging
+INITIAL_RETRY_DELAY = "750"        # Medium initial delay for staging
